--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
             justify-content: center;
             align-items: center;
             border-bottom: 2px solid #ddd;
+			background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+        }
+
+        #section1 { background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://lh3.googleusercontent.com/d/15QskaOFYasIwJ_Lech6Obh7cFyyjgwbb'); }
+        #section2 { background-image: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)), url('https://lh3.googleusercontent.com/d/1wMVz-l9BQTgRB3ZyBAq5ZejfprkuFMrC'); }
+        #section3 { background-image: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)), url('https://lh3.googleusercontent.com/d/1c98e297OCNr9f-66W33sg9Rh2LYyR-7V');
         }
 
         .container {
